--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
 body {
   overflow-x: hidden;
   font-family: 'Poppins', sans-serif;
-  background: url(../img/bg.png) no-repeat;
+  background: url(../img/bg.webp) no-repeat;
   background-size: 100%;
   color: #000;
   display: flex;
